...
    }
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('gift_details_scaffold'),
      appBar: AppBar(
        key: const Key('gift_details_app_bar'),
        title: Text(
          widget.gift == null ? 'Add Gift' : 'Edit Gift',
          key: const Key('gift_details_title'),
        ),
...
            const Text(
              'Gift Name',
              key: Key('gift_name_title'),
              style: TextStyle(fontSize: 14, fontWeight: FontWeight.bold),
            ),
            TextField(
              key: const Key('gift_name_text_field'),
              controller: nameController,
              decoration: const InputDecoration(border: OutlineInputBorder()),
            ),
            const SizedBox(height: 10),
            const Text(
              'Category',
...
            const Text(
              'Price (EGP)',
              key: Key('gift_price_title'),
              style: TextStyle(fontSize: 14, fontWeight: FontWeight.bold),
            ),
            TextField(
              key: const Key('gift_price_text_field'),
              controller: priceController,
              decoration: const InputDecoration(border: OutlineInputBorder()),
              keyboardType: TextInputType.number,
            ),
            const SizedBox(height: 10),
            const Text(
              'Description',
              key: Key('gift_description_title'),
              style: TextStyle(fontSize: 14, fontWeight: FontWeight.bold),
            ),
            TextField(
              key: const Key('gift_description_text_field'),
              controller: descriptionController,
              decoration: const InputDecoration(border: OutlineInputBorder()),
              maxLines: 3,
            ),
            const SizedBox(height: 20),
            const Text(
...
                  key: const Key('gift_status_switch'),
                  value: isAvailable,
                  onChanged: widget.isEditable
                      ? (value) {
                          setState(() {
                            isAvailable = value;
                            status = isAvailable ? 'Available' : 'Pledged';
                          });
                        }
                      : null,
                  activeColor: const Color(0xFFf0207c),
                ),
                Text(
...
              ],
            ),
            const SizedBox(height: 20),
            if (widget.isEditable)
              Center(
                child: ElevatedButton(
                  key: const Key('save_changes_button'),
                  onPressed: _saveGift,
                  style: ElevatedButton.styleFrom(
                    backgroundColor: const Color(0xFFe5f8ff),
                    side: const BorderSide(
                      color: Color(
                          0xFF005F73), // Change this to your desired outline color
...
