...
  Widget build(BuildContext context) {
    ScreenUtil.init(context, designSize: const Size(375, 812));

    return ResponsiveBuilder(
      builder: (context, sizingInformation) {
        return Scaffold(
          key: const Key('home_view_scaffold'),
          backgroundColor: Colors.white, // Set background to white
          appBar: CustomHeader(
            title: 'Hedieaty',
            onProfileTap: () {},
            onNotificationTap: () {},
          ),
...
                    ),
                  ),
                ),
                const SizedBox(height: 24),
                Flexible(
                  child: TextField(
                    key: const Key('search_text_field'),
                    onChanged: (value) {
                      setState(() {
                        searchQuery = value.trim().toLowerCase();
                      });
                    },
                    decoration: InputDecoration(
...
                  width: 2), // Darker blue outline
              color: Colors.white, // White background
              borderRadius:
                  BorderRadius.circular(12), // Square with rounded corners
            ),
            child: IconButton(
              key: const Key('add_friend_fab'),
              icon: const Icon(Icons.person_add,
                  color: Color(0xFFEF0F72), size: 28), // Magenta icon
              onPressed: () {
                _showAddFriendDialog(context);
              },
            ),
...
